@@ -1,6 +1,5 @@
 package bowser.handler;
 
-import java.io.File;
 import java.io.IOException;
 import java.util.List;
 
@@ -10,7 +9,6 @@ import bowser.Controller;
 import bowser.Handler;
 import ox.Json;
 import ox.Log;
-import ox.OS;
 
 public class GitHooks extends Controller {
 
@@ -72,15 +70,15 @@ public class GitHooks extends Controller {
   private void restart() {
     Log.info("Restarting server.");
     try {
-      File out = new File(OS.getHomeFolder(), "restart-log.txt");
-      new ProcessBuilder(updatePath)
-          .redirectOutput(out)
-          .redirectError(out)
-          .start();
+      // File out = new File(OS.getHomeFolder(), "restart-log.txt");
+      // new ProcessBuilder(updatePath)
+      // .redirectOutput(out)
+      // .redirectError(out)
+      // .start();
+      Runtime.getRuntime().exec(updatePath);
     } catch (IOException e) {
       e.printStackTrace();
     }
-    // Runtime.getRuntime().exec(updatePath);
   }
 
 }
